GNOME Bugzilla – Bug 757170
Modifies task twice
Last modified: 2015-10-27 17:20:57 UTC
While I was investigating the cause of the crash from bug #757169, I noticed that gnome-todo calls e_cal_client_modify() twice when saving the changes. At least the backtrace and my debugging shows that. The gnome-todo should call the "modify" only once, not twice, for one change. Steps: a) edit an existing task in a Google calendar b) change Due date and Priority c) click the "x" button of the task details to save the changes The associated evolution-calendar-factory-subprocess shows that the modify is called twice "at the same time".
Created attachment 314250 [details] [review] edit-pane: don't send ::edit-finished signal needlessly The fix for the double save.
Attachment 314250 [details] pushed as 2ead42d - edit-pane: don't send ::edit-finished signal needlessly