edit-pane: don't send ::edit-finished signal needlessly

Simply setting the task to NULL is enought to actualy
send the GtdEditPane::edit-finished signal, thus there's
no need to send it manually when the close button is
clicked.

https://bugzilla.gnome.org/show_bug.cgi?id=757170